--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ h3 {
 }
 .section {
   scroll-margin-top: 4rem;
+  padding: 5rem 0;
 }
 /* add :not(.nav-logo) to img */
 /* NAvBar */
@@ -178,5 +179,38 @@ min-height:calc(100vh - 62px);
     width: 100%;
     height: 100%;
     border: 0.5rem solid grey;
+  }
+}
+
+/* services */
+
+@media screen and (min-width: 576px) {
+  .services-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+  }
+  .service {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  .services-center {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .service {
+    display: flex;
+    text-align: left;
+  }
+  .service-icon {
+    align-self: start;
+  }
+  .service-info {
+    padding-left: 1rem;
+  }
+  .service-title {
+    margin-bottom: 0.5rem;
   }
 }
