--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@ h3 {
   scroll-margin-top: 4rem;
   padding: 5rem 0;
 }
+.section-title {
+  text-align: center;
+}
 /* add :not(.nav-logo) to img */
 /* NAvBar */
 .navbar {
